<resources>
    <string name="app_name">SqliteDemo</string>


    <string name="customer_name_search_hint">like \"^fre.*y$\"</string>
    <string name="customer_age_search_hint">like \">= 15\"</string>
    <string name="customer_name">Name</string>
    <string name="customer_age">Age</string>
    <string name="customer_active">Active</string>
    <string name="customer_view_all">All</string>
    <string name="customer_add">Add</string>
    <string name="customer_delete">Delete</string>

    <string name="search_clear">Search Clear</string>
    <string name="start_search">Start Search</string>
    <string name="done">Done</string>

    <string name="simple_search">Simple Name Search</string>
    <string name="sql_search">SQL Search</string>

    <string-array name="search_types">
        <item>@string/simple_search</item>
        <item>@string/sql_search</item>
    </string-array>
</resources>
